gitops/apps/orders/overlays/local/cart-local.yaml
---
# Source: cart/templates/1-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-canary
  namespace: demo
spec:
  selector:
    app: cart
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
      name: http
---
# Source: cart/templates/1-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-stable
  namespace: demo
spec:
  selector:
    app: cart
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
      name: http
---
# Source: cart/templates/4-serviceMonitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-metrics
  namespace: demo
  labels:
    app: cart
    metrics: "true"
spec:
  selector:
    app: cart
  ports:
    - name: metrics
      port: 9466
      targetPort: 9466
      protocol: TCP
---
# Source: cart/templates/11-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: cart
  namespace: demo
spec:
  replicas: 2
  revisionHistoryLimit: 2

  selector:
    matchLabels:
      app: cart

  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: cart
        istio: monitor

    spec:
      containers:
        - name: cart
          image: "devopsflow999/cart:main-v0.1.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3003
              protocol: TCP
            - name: metrics
              containerPort: 9466
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi

  strategy:
      canary:
        stableService: cart-stable
        canaryService: cart-canary

        trafficRouting:
          istio:
            virtualService:
              name: cart-vsvc
              routes:
                - primary
        steps:
          - setWeight: 10
          - setWeight: 20
          - pause:
              duration: 20s
          - setWeight: 30
          - pause:
              duration: 20s
          - setWeight: 40
          - pause:
              duration: 20s
          - setWeight: 50
          - pause:
              duration: 20s
          - setWeight: 60
          - pause:
              duration: 20s
          - setWeight: 70
          - pause:
              duration: 20s
          - setWeight: 80
          - pause:
              duration: 20s
          - setWeight: 90
          - pause:
              duration: 20s
---
# Source: cart/templates/2-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cart-vsvc
  namespace: demo
spec:
  hosts:
    - "api.localdev.me"
  gateways:
    - "api-gateway"
  http:

    # Canary route
    - name: cart-canary-debug
      match:
        - uri:
            prefix: "/cart/cart"
          headers:
            x-canary:
              exact: "true"
      rewrite:
        uri: "/cart"
      route:
        - destination:
            host: cart-canary
            port:
              number: 3003
          weight: 100
      # corsPolicy:
      #   allowOrigins:
      #     - exact: "http://frontend.localdev.me"
      #   allowMethods: ["GET","POST","PUT","DELETE","OPTIONS"]
      #   allowHeaders: ["*"]
      #   allowCredentials: true
      #   maxAge: "1h"

    # Stable route
    - name: primary
      match:
        - uri:
            prefix: "/cart/cart"
      rewrite:
        uri: "/cart"
      route:
        - destination:
            host: cart-stable
            port:
              number: 3003
          weight: 100
        - destination:
            host: cart-canary
            port:
              number: 3003
          weight: 0
      # corsPolicy:
      #   allowOrigins:
      #     - exact: "http://frontend.localdev.me"
      #   allowMethods: ["GET","POST","PUT","DELETE","OPTIONS"]
      #   allowHeaders: ["*"]
      #   allowCredentials: true
      #   maxAge: "1h"
