gitops/apps/orders/overlays/local/orders-local.yaml
---
# Source: orders/templates/1-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-canary
  namespace: demo
spec:
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
      name: http
---
# Source: orders/templates/1-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-stable
  namespace: demo
spec:
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
      name: http
---
# Source: orders/templates/4-serviceMonitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-metrics
  namespace: demo
  labels:
    app: orders
    metrics: "true"
spec:
  selector:
    app: orders
  ports:
    - name: metrics
      port: 9467
      targetPort: 9467
      protocol: TCP
---
# Source: orders/templates/11-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: orders
  namespace: demo
spec:
  replicas: 1
  revisionHistoryLimit: 1

  selector:
    matchLabels:
      app: orders

  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: orders
        istio: monitor

    spec:
      containers:
        - name: orders
          image: "devopsflow999/orders:main-v0.1.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3004
              protocol: TCP
            - name: metrics
              containerPort: 9467
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi

  strategy:
      canary:
        stableService: orders-stable
        canaryService: orders-canary

        trafficRouting:
          istio:
            virtualService:
              name: orders-vsvc
              routes:
                - primary
        steps:
          - setWeight: 10
          - setWeight: 20
          - pause:
              duration: 20s
          - setWeight: 30
          - pause:
              duration: 20s
          - setWeight: 40
          - pause:
              duration: 20s
          - setWeight: 50
          - pause:
              duration: 20s
          - setWeight: 60
          - pause:
              duration: 20s
          - setWeight: 70
          - pause:
              duration: 20s
          - setWeight: 80
          - pause:
              duration: 20s
          - setWeight: 90
          - pause:
              duration: 20s
---
# Source: orders/templates/2-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: orders-vsvc
  namespace: demo
spec:
  hosts:
    - "api.localdev.me"
  gateways:
    - "api-gateway"
  http:

    # Canary route
    - name: orders-canary-debug
      match:
        - uri:
            prefix: "/orders/"
          headers:
            x-canary:
              exact: "true"
        - uri:
            prefix: "/orders"
          headers:
            x-canary:
              exact: "true"
      route:
        - destination:
            host: orders-canary
            port:
              number: 3004
          weight: 100
      # corsPolicy:
      #   allowOrigins:
      #     - exact: "http://frontend.localdev.me"
      #   allowMethods: ["GET","POST","PUT","DELETE","OPTIONS"]
      #   allowHeaders: ["*"]
      #   allowCredentials: true
      #   maxAge: "1h"

    # Stable route
    - name: primary
      match:
        - uri:
            prefix: "/orders/"
        - uri:
            exact: "/orders"
        - uri:
            prefix: "/orders"
        - uri:
            exact: "/orders"
      route:
        - destination:
            host: orders-stable
            port:
              number: 3004
          weight: 100
        - destination:
            host: orders-canary
            port:
              number: 3004
          weight: 0
      # corsPolicy:
      #   allowOrigins:
      #     - exact: "http://frontend.localdev.me"
      #   allowMethods: ["GET","POST","PUT","DELETE","OPTIONS"]
      #   allowHeaders: ["*"]
      #   allowCredentials: true
      #   maxAge: "1h"
